--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "deviant.js",
   "dependencies": {
     "axios": "^0.15.3",
-    "xml-js": "^1.0.2"
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.2.1",
