--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "deviant.js",
   "dependencies": {
     "axios": "^0.15.3",
+    "btoa": "^1.1.2",
+    "express": "^4.15.0",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-regenerator": "^6.1.4",
     "babel-polyfill": "^6.1.4",
